dist/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>npo02__Soft_Credit_Total__c</fullName>
        <inlineHelpText>Total amount in soft credits for this Contact&apos;s lifetime. Defined in the Household Settings tab.</inlineHelpText>
        <label>Soft Credit Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Soft_Credit_Two_Years_Ago__c</fullName>
        <inlineHelpText>The sum of soft credit Opportunity amounts two years ago determined by Opportunity Contact Role and filtered by Roles in Household Settings.</inlineHelpText>
        <label>Soft Credit Two Years Ago</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__SystemHouseholdProcessor__c</fullName>
        <description>Used to set if Households should get created for all Contacts, or just those which are connected to an individual account.  Deprecated; replaced by HouseholdsSettings npo02__Household_Rules__c</description>
        <label>_SYSTEM: HOUSEHOLD PROCESSOR-DEPRECATED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Individual Contacts</fullName>
                </value>
                <value>
                    <fullName>All New or Edited Contacts</fullName>
                </value>
                <value>
                    <fullName>No Contacts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npo02__TotalMembershipOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types.  Do not update, updated by automatic process.</description>
        <inlineHelpText>The total amount of won Membership Opportunities (Record Type) related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Total Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__TotalOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types.  Do not update, updated by automatic process.</description>
        <inlineHelpText>The sum of won Opportunity Amounts related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Total Gifts</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Total_Household_Gifts__c</fullName>
        <description>Formula:  Total Gifts on related Household.</description>
        <formula>IF(npe01__Organization_Type__c == &apos;Household Account&apos;, 
Account.npo02__TotalOppAmount__c,
npo02__Household__r.npo02__TotalOppAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula:  Total Gifts on related Household.</inlineHelpText>
        <label>Total Household Gifts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Address_Verification_Status__c</fullName>
        <description>The verification status of the current Address. If this Address requires verification, navigate to the current Address record and select Verify Address.  Consult the Power of Us Hub documentation for more information on Address Verification..</description>
        <formula>npsp__Current_Address__r.npsp__Verification_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The verification status of the current Address. If this Address requires verification, navigate to the current Address record and select Verify Address. Consult the Power of Us Hub documentation for more information on Address Verification.</inlineHelpText>
        <label>Address Verification Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Batch that this Contact was created in.</description>
        <inlineHelpText>Lookup to the Batch that this Contact was created in.</inlineHelpText>
        <label>Batch</label>
        <referenceTo>npsp__Batch__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Current_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the current Address record for this Contact. NPSP populates the Contact&apos;s Mailing Address field with the street, city, state, and postal code from the current Address record.</description>
        <inlineHelpText>Lookup to the current Address record for this Contact. NPSP populates the Contact&apos;s Mailing Address field with the street, city, state, and postal code from the current Address record.</inlineHelpText>
        <label>Current Address</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>npsp__Address__c.npsp__Household_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <infoMessage>To see all addresses for the Contact&apos;s household, enter A-* in the search window</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>npsp__Address__c</referenceTo>
        <relationshipLabel>Contacts (Current Address)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the Contact is deceased. When selected, NPSP excludes this Contact from Household Naming (unless this Contact is the only one in the Household) and from standard email and phone lists.</description>
        <inlineHelpText>Indicates the Contact is deceased. When selected, NPSP excludes this Contact from Household Naming (unless this Contact is the only one in the Household) and from standard email and phone lists.</inlineHelpText>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the Contact does not want your organization to call or email. Use this field to filter out Contacts in email and phone lists. When selected, NPSP excludes this Contact from Opportunity Acknowledgements.</description>
        <inlineHelpText>Indicates the Contact does not want your organization to call or email. Use this field to filter out Contacts in email and phone lists. When selected, NPSP excludes this Contact from Opportunity Acknowledgements.</inlineHelpText>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Exclude_from_Household_Formal_Greeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, NPSP excludes this Contact from the Household Formal Greeting (set in NPSP Settings | People | Households).</description>
        <inlineHelpText>When selected, NPSP excludes this Contact from the Household Formal Greeting (set in NPSP Settings | People | Households).</inlineHelpText>
        <label>Exclude from Household Formal Greeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Exclude_from_Household_Informal_Greeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, NPSP excludes this Contact from the Household Informal Greeting (set in NPSP Settings | People | Households).</description>
        <inlineHelpText>When selected, NPSP excludes this Contact from the Household Informal Greeting (set in NPSP Settings | People | Households).</inlineHelpText>
        <label>Exclude from Household Informal Greeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Exclude_from_Household_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, NPSP excludes this Contact from the Household Name (set in NPSP Settings | People | Households).</description>
        <inlineHelpText>When selected, NPSP excludes this Contact from the Household Name (set in NPSP Settings | People | Households).</inlineHelpText>
        <label>Exclude from Household Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__First_Soft_Credit_Amount__c</fullName>
        <description>The amount of this Contact&apos;s earliest soft credit.</description>
        <inlineHelpText>The amount of this Contact&apos;s earliest soft credit.</inlineHelpText>
        <label>First Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__First_Soft_Credit_Date__c</fullName>
        <description>The date of this Contact&apos;s earliest soft credit.</description>
        <inlineHelpText>The date of this Contact&apos;s earliest soft credit.</inlineHelpText>
        <label>First Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__HHId__c</fullName>
        <description>Holds the Id of the Household record (either Household Account, or Household object) this Contact is currently associated with (read only).</description>
        <formula>if(Account.npe01__SYSTEM_AccountType__c==&apos;Household Account&apos;,CASESAFEID(AccountId),CASESAFEID(npo02__Household__c))</formula>
        <inlineHelpText>Holds the Id of the Household record (either Household Account, or Household object) this Contact is currently associated with (read only).</inlineHelpText>
        <label>HHId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Largest_Soft_Credit_Amount__c</fullName>
        <description>The amount of this Contact&apos;s largest soft credit.</description>
        <inlineHelpText>The amount of this Contact&apos;s largest soft credit.</inlineHelpText>
        <label>Largest Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Largest_Soft_Credit_Date__c</fullName>
        <description>The date of this Contact&apos;s largest soft credit.</description>
        <inlineHelpText>The date of this Contact&apos;s largest soft credit.</inlineHelpText>
        <label>Largest Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Last_Soft_Credit_Amount__c</fullName>
        <description>The amount of this Contact&apos;s most recent soft credit.</description>
        <inlineHelpText>The amount of this Contact&apos;s most recent soft credit.</inlineHelpText>
        <label>Last Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Last_Soft_Credit_Date__c</fullName>
        <description>The date of this Contact&apos;s most recent soft credit.</description>
        <inlineHelpText>The date of this Contact&apos;s most recent soft credit.</inlineHelpText>
        <label>Last Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits_Last_N_Days__c</fullName>
        <description>The number of soft credits attributed to this Contact that closed in the last N days. The value of N is set in NPSP Settings | Donations | Donor Statistics.</description>
        <inlineHelpText>The number of soft credits attributed to this Contact that closed in the last N days. The value of N is set in NPSP Settings | Donations | Donor Statistics.</inlineHelpText>
        <label>Number of Soft Credits Last N Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits_Last_Year__c</fullName>
        <description>The number of soft credits attributed to this Contact in the previous calendar year.</description>
        <inlineHelpText>The number of soft credits attributed to this Contact in the previous calendar year.</inlineHelpText>
        <label>Number of Soft Credits Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits_This_Year__c</fullName>
        <description>The number of soft credits attributed to this Contact this calendar year.</description>
        <inlineHelpText>The number of soft credits attributed to this Contact this calendar year.</inlineHelpText>
        <label>Number of Soft Credits This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits_Two_Years_Ago__c</fullName>
        <description>The number of soft credits attributed to this Contact two calendar years ago.</description>
        <inlineHelpText>The number of soft credits attributed to this Contact two calendar years ago.</inlineHelpText>
        <label>Number of Soft Credits Two Years Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits__c</fullName>
        <description>The total number of soft credits attributed to this Contact.</description>
        <inlineHelpText>The total number of soft credits attributed to this Contact.</inlineHelpText>
        <label>Number of Soft Credits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Primary_Affiliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account marked as Primary in this Contact&apos;s list of Organization Affiliations.</description>
        <inlineHelpText>The Account marked as Primary in this Contact&apos;s list of Organization Affiliations.</inlineHelpText>
        <label>Primary Affiliation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Do Not Use.  Use Organization Affiliations.</relationshipLabel>
        <relationshipName>PrimaryAffiliatedContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Primary_Contact__c</fullName>
        <description>Indicates if this Contact is designated as the Primary Contact on their Account (read only).</description>
        <formula>Account.npe01__One2OneContact__c = Id</formula>
        <inlineHelpText>Indicates if this Contact is designated as the Primary Contact on their Account (read only).</inlineHelpText>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Soft_Credit_Last_N_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total amount of soft credit attributed to this Contact in the last N days. The value of N is set in NPSP Settings | Donations | Donor Statistics.</description>
        <inlineHelpText>The total amount of soft credit attributed to this Contact in the last N days. The value of N is set in NPSP Settings | Donations | Donor Statistics.</inlineHelpText>
        <label>Soft Credit Last N Days</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__is_Address_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, NPSP will not sync this Contact&apos;s address with the Household Default or Seasonal Address. Use this to maintain a separate Mailing Address for this particular Contact.</description>
        <inlineHelpText>When selected, NPSP will not sync this Contact&apos;s address with the Household Default or Seasonal Address. Use this to maintain a separate Mailing Address for this particular Contact.</inlineHelpText>
        <label>Address Override</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Advanced_Tutor_Pathway</fullName>
        <columns>FULL_NAME</columns>
        <columns>Advanced_Tutor_Status__c</columns>
        <columns>Advanced_Tutor_Score__c</columns>
        <columns>X3_Schools__c</columns>
        <columns>Multiple_Subjects__c</columns>
        <columns>LAC_AP_Experience__c</columns>
        <columns>CPD_Attended__c</columns>
        <columns>Co_ordinator_Score__c</columns>
        <columns>Quality_and_Impact_Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>Greater Manchester</value>
        </filters>
        <filters>
            <field>Tutor_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Advanced_Tutor_Status__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Advanced Tutor Pathway - MCR</label>
    </listViews>
    <listViews>
        <fullName>Advanced_Tutor_Pathway_Leeds</fullName>
        <columns>FULL_NAME</columns>
        <columns>Advanced_Tutor_Status__c</columns>
        <columns>Advanced_Tutor_Score__c</columns>
        <columns>X3_Schools__c</columns>
        <columns>Multiple_Subjects__c</columns>
        <columns>CPD_Attended__c</columns>
        <columns>LAC_AP_Experience__c</columns>
        <columns>Co_ordinator_Score__c</columns>
        <columns>Quality_and_Impact_Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Advanced_Tutor_Status__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Tutor_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>Leeds</value>
        </filters>
        <filters>
            <field>Advanced_Tutor_Score__c</field>
            <operation>greaterOrEqual</operation>
            <value>6</value>
        </filters>
        <label>Advanced Tutor Pathway - Leeds</label>
    </listViews>
    <listViews>
        <fullName>Advanced_Tutor_Pathway_Liv</fullName>
        <columns>FULL_NAME</columns>
        <columns>Advanced_Tutor_Status__c</columns>
        <columns>Advanced_Tutor_Score__c</columns>
        <columns>X3_Schools__c</columns>
        <columns>Multiple_Subjects__c</columns>
        <columns>LAC_AP_Experience__c</columns>
        <columns>CPD_Attended__c</columns>
        <columns>Co_ordinator_Score__c</columns>
        <columns>Quality_and_Impact_Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>Liverpool</value>
        </filters>
        <filters>
            <field>CONTACT.IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Tutor_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Advanced_Tutor_Score__c</field>
            <operation>greaterOrEqual</operation>
            <value>6</value>
        </filters>
        <label>Advanced Tutor Pathway - Liv</label>
    </listViews>
    <listViews>
        <fullName>Advanced_Tutor_Pathway_Scores</fullName>
        <columns>FULL_NAME</columns>
        <columns>Area__c</columns>
        <columns>Hours_To_Date__c</columns>
        <columns>Tutor_Start_Date__c</columns>
        <columns>Advanced_Tutor_Status__c</columns>
        <columns>Advanced_Tutor_Score__c</columns>
        <columns>Quality_and_Impact_Score__c</columns>
        <columns>Co_ordinator_Score__c</columns>
        <columns>CPD_Attended__c</columns>
        <columns>LAC_AP_Experience__c</columns>
        <columns>Multiple_Subjects__c</columns>
        <columns>Quality_Check_2018_19__c</columns>
        <columns>Application_Score__c</columns>
        <columns>Interview_Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Tutor_Start_Date__c</field>
            <operation>greaterThan</operation>
            <value>9/20/2018</value>
        </filters>
        <label>Advanced Tutor Pathway Scores</label>
    </listViews>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>Area__c</columns>
        <columns>Tutor_Start_Date__c</columns>
        <columns>Hours_2018_19__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>School_Type__c</columns>
        <columns>Tutor_Secondary_Skill_Set__c</columns>
        <columns>Hours_To_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Manchester_Tutors</fullName>
        <columns>FULL_NAME</columns>
        <columns>School_Type__c</columns>
        <columns>Area_of_Residence__c</columns>
        <columns>University_Course__c</columns>
        <columns>University_Attended__c</columns>
        <columns>Tutor_Start_Date__c</columns>
        <columns>ActiveTutor__c</columns>
        <columns>Availability_Notes__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>Tutor_Secondary_Skill_Set__c</columns>
        <columns>Advanced_Tutor_Score__c</columns>
        <columns>LAC_AP_Experience__c</columns>
        <columns>School_Affiliations__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>Greater Manchester</value>
        </filters>
        <filters>
            <field>Tutor_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Manchester Tutors</label>
    </listViews>
    <listViews>
        <fullName>All_Q_and_I</fullName>
        <columns>FULL_NAME</columns>
        <columns>Area__c</columns>
        <columns>X2019_20_Assignments__c</columns>
        <columns>Lesson_Plan_Spot_Check__c</columns>
        <columns>Lesson_Observation__c</columns>
        <columns>X2019_20_Safeguarding__c</columns>
        <columns>Quality_and_Impact_Score__c</columns>
        <columns>Advanced_Tutor_Score__c</columns>
        <columns>Tutor_Start_Date__c</columns>
        <columns>Hours_To_Date__c</columns>
        <columns>Total_Paid_All_Time__c</columns>
        <columns>Co_ordinator_Score__c</columns>
        <columns>Total_Hours__c</columns>
        <columns>Hours_2019_20__c</columns>
        <columns>Hours_2018_19__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Currently_Working_2019_20__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Q and I</label>
    </listViews>
    <listViews>
        <fullName>All_Tutors</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Tutor</value>
        </filters>
        <label>All Tutors</label>
    </listViews>
    <listViews>
        <fullName>All_Tutors_with_Logins</fullName>
        <columns>FULL_NAME</columns>
        <columns>Area__c</columns>
        <columns>AreaPicklist__c</columns>
        <columns>School_Type__c</columns>
        <columns>SchoolType__c</columns>
        <columns>SecondarySubjectArea__c</columns>
        <columns>SecondarySchoolSubjects__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Tutor</value>
        </filters>
        <filters>
            <field>CommunityUser__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Tutors with Logins</label>
    </listViews>
    <listViews>
        <fullName>All_active_tutors</fullName>
        <columns>FULL_NAME</columns>
        <columns>Area__c</columns>
        <columns>Tutor_Start_Date__c</columns>
        <columns>Advanced_Tutor_Status__c</columns>
        <columns>X2019_20_Assignments__c</columns>
        <columns>Area_of_Residence__c</columns>
        <columns>School_Type__c</columns>
        <columns>Tutor_Secondary_Skill_Set__c</columns>
        <columns>Currently_Working_2019_20__c</columns>
        <columns>Hours_2019_20__c</columns>
        <columns>Advanced_Tutor_Score__c</columns>
        <columns>Co_ordinator_Score__c</columns>
        <columns>Quality_and_Impact_Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tutor_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>Greater Manchester,Leeds,Liverpool</value>
        </filters>
        <label>All active tutors</label>
    </listViews>
    <listViews>
        <fullName>Community_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CommunityUser__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Community Users</label>
    </listViews>
    <listViews>
        <fullName>Leeds_Secondary_Tutors</fullName>
        <columns>FULL_NAME</columns>
        <columns>School_Type__c</columns>
        <columns>Tutor_Secondary_Skill_Set__c</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Availability_Notes__c</columns>
        <columns>General_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>Leeds</value>
        </filters>
        <filters>
            <field>School_Type__c</field>
            <operation>equals</operation>
            <value>Secondary,Primary and Secondary</value>
        </filters>
        <filters>
            <field>Tutor_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Leeds Secondary Tutors</label>
    </listViews>
    <listViews>
        <fullName>Leeds_Tutors</fullName>
        <columns>FULL_NAME</columns>
        <columns>School_Type__c</columns>
        <columns>Tutor_Start_Date__c</columns>
        <columns>Total_Hours__c</columns>
        <columns>Schools_Previously_Worked_In__c</columns>
        <columns>Quality_Check_2018_19__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Advanced_Tutor_Score__c</columns>
        <columns>Advanced_Tutor_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>Leeds</value>
        </filters>
        <filters>
            <field>Tutor_Status__c</field>
            <operation>equals</operation>
            <value>Active,Inactive - Year Abroad,Inactive - Other</value>
        </filters>
        <label>Leeds Tutors</label>
    </listViews>
    <listViews>
        <fullName>Liverpool_Online_Tutors</fullName>
        <columns>FULL_NAME</columns>
        <columns>Area__c</columns>
        <columns>School_Type__c</columns>
        <columns>Tutor_Secondary_Skill_Set__c</columns>
        <columns>Advanced_Tutor_Status__c</columns>
        <columns>Advanced_Tutor_Score__c</columns>
        <columns>Hours_2019_20__c</columns>
        <columns>Co_ordinator_Score__c</columns>
        <columns>Quality_and_Impact_Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interested_in_Online__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>Liverpool</value>
        </filters>
        <label>Liverpool Online Tutors</label>
    </listViews>
    <listViews>
        <fullName>Liverpool_Tutors</fullName>
        <columns>FULL_NAME</columns>
        <columns>School_Type__c</columns>
        <columns>Tutor_Secondary_Skill_Set__c</columns>
        <columns>Tutor_Status__c</columns>
        <columns>University_Course__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>Schools_Previously_Worked_In__c</columns>
        <columns>Higher_Maths_Tutor__c</columns>
        <columns>University_Attended__c</columns>
        <columns>Advanced_Tutor_Status__c</columns>
        <columns>Advanced_Tutor_Score__c</columns>
        <columns>Tutor_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>Liverpool</value>
        </filters>
        <filters>
            <field>Tutor_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Liverpool Tutors</label>
    </listViews>
    <recordTypes>
        <fullName>Pupil</fullName>
        <active>true</active>
        <label>Pupil</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tutor</fullName>
        <active>true</active>
        <label>Tutor</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BankNumberMustBe8Digits</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
LEN(BankAccountNumber__c) &gt; 0,
NOT(REGEX( BankAccountNumber__c , &quot;[0-9]{8}&quot;))
)</errorConditionFormula>
        <errorMessage>Bank Account Number must be 8 Digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReferencingRequiresReferees</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(QualificationStatus__c,&apos;Referencing&apos;), RequestReferencesAutomatically__c, OR( ISBLANK( AcademicRefereeEmail__c ),ISBLANK( AcademicRefereeName__c ),ISBLANK( PersonalRefereeEmail__c ),ISBLANK( PersonalRefereeName__c )))</errorConditionFormula>
        <errorMessage>Please ensure you have completed all referee details as emails are sent to them automatically, if you do not wish to send them you can set &apos;Request References Automatically&apos; to false.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SortCode6Digits</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
LEN( BankSortCode__c) &gt; 0,
NOT(REGEX( BankSortCode__c , &quot;[0-9]{6}&quot;))
)</errorConditionFormula>
        <errorMessage>Sort Code must be 6 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TwoApprovedReferences</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

ReferencesApproved__c &lt; 2,

ISPICKVAL( QualificationStatus__c , &apos;Complete&apos;))</errorConditionFormula>
        <errorMessage>Please ensure Tutor has two approved references before completing.</errorMessage>
    </validationRules>
</CustomObject>